--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,47 @@
 <html>
   <head>
     <base target="_top">
+    <style>
+      :root {
+        color-scheme: light;
+      }
+
+      body {
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #ff7a18, #ffb347);
+        color: #1f1200;
+      }
+
+      .card {
+        background: rgba(255, 255, 255, 0.92);
+        border-radius: 24px;
+        padding: 32px 40px;
+        box-shadow: 0 20px 45px rgba(255, 122, 24, 0.35);
+        text-align: center;
+        max-width: 520px;
+      }
+
+      .card h1 {
+        margin: 0 0 12px;
+        font-size: 2.4rem;
+        color: #ff7a18;
+      }
+
+      .card p {
+        margin: 0;
+        font-size: 1.1rem;
+      }
+    </style>
   </head>
   <body>
-    
+    <div class="card">
+      <h1>Bitcoin Dashboard</h1>
+      <p>The theme has been updated to a warm orange palette.</p>
+    </div>
   </body>
 </html>
