Add item description and sats history chart

--- a/Index.html
+++ b/Index.html
@@ -201,17 +201,16 @@
       <div class="card" style="grid-column: 1 / -1;">
         <div class="row" style="justify-content:space-between;">
           <h3 style="margin:0;">Selected item history</h3>
-          <div class="row">
-            <select id="mode">
-              <option value="usd">USD</option>
-              <option value="sats">sats</option>
-            </select>
-          </div>
         </div>
 
         <div style="height:12px"></div>
         <div class="chartBox">
-          <canvas id="itemChart"></canvas>
+          <canvas id="itemUsdChart"></canvas>
+        </div>
+
+        <div style="height:12px"></div>
+        <div class="chartBox">
+          <canvas id="itemSatsChart"></canvas>
         </div>
 
         <div class="note" id="itemNote"></div>
@@ -224,7 +223,8 @@
   let latest = null;
   let activeItemId = null;
 
-  let itemChart = null;
+  let itemUsdChart = null;
+  let itemSatsChart = null;
   let basketChart = null;
 
   const $ = (id) => document.getElementById(id);
@@ -262,6 +262,7 @@
       const row = latest?.items?.find(x => x.id === it.id);
       const usd = row?.usd;
       const sats = row?.sats;
+      const description = row?.description;
       const stale = Boolean(row?.is_stale);
       const source = row?.price_source || "";
 
@@ -277,6 +278,7 @@
         <div class="meta">
           <span>${usd != null ? fmtUsd(usd) : "—"}</span>
           <span>${sats != null ? fmtSats(sats) : "—"}</span>
+          ${description ? `<span>Qty: ${escapeHtml(description)}</span>` : ""}
         </div>
       `;
       root.appendChild(div);
@@ -348,32 +350,57 @@
   async function renderItemHistory(){
     if (!activeItemId) return;
 
-    const mode = $("mode").value;
-
     const hist = await new Promise((resolve, reject) => {
       google.script.run.withSuccessHandler(resolve).withFailureHandler(reject).getItemHistory(activeItemId);
     });
 
     const item = cfg.items.find(x => x.id === activeItemId);
+    const latestRow = latest?.items?.find(x => x.id === activeItemId);
     const staleCount = hist.filter(x => x.is_stale).length;
+    const description = latestRow?.description || hist.slice().reverse().find(x => x.description)?.description || "";
 
     $("itemNote").innerHTML =
       (item ? ("Query: <b>" + escapeHtml(item.query) + "</b>") : "") +
+      (description ? (" — Quantity: <b>" + escapeHtml(description) + "</b>") : "") +
       (staleCount ? (" — <span class='warn'>" + staleCount + " stale points</span>") : "");
 
     const labels = hist.map(p => new Date(p.ts).toLocaleString());
-    const series = hist.map(p => mode === "usd" ? p.usd : p.sats);
+    const usdSeries = hist.map(p => p.usd);
+    const satsSeries = hist.map(p => p.sats);
 
-    itemChart = destroyChartSafe(itemChart);
+    itemUsdChart = destroyChartSafe(itemUsdChart);
+    itemSatsChart = destroyChartSafe(itemSatsChart);
 
-    const ctx = $("itemChart").getContext("2d");
-    itemChart = new Chart(ctx, {
+    const usdCtx = $("itemUsdChart").getContext("2d");
+    itemUsdChart = new Chart(usdCtx, {
       type: "line",
       data: {
         labels,
         datasets: [{
-          label: mode === "usd" ? "Price (USD)" : "Price (sats)",
-          data: series,
+          label: "Price (USD)",
+          data: usdSeries,
+          borderWidth: 2,
+          tension: 0.25,
+          pointRadius: 2
+        }]
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        animation: false,
+        plugins: { legend: { display: true } },
+        scales: { x: { ticks: { maxTicksLimit: 6 } } }
+      }
+    });
+
+    const satsCtx = $("itemSatsChart").getContext("2d");
+    itemSatsChart = new Chart(satsCtx, {
+      type: "line",
+      data: {
+        labels,
+        datasets: [{
+          label: "Price (sats)",
+          data: satsSeries,
           borderWidth: 2,
           tension: 0.25,
           pointRadius: 2
@@ -428,7 +455,6 @@
     });
   }
 
-  $("mode").addEventListener("change", renderItemHistory);
   $("btnFetch").addEventListener("click", fetchLatest);
   $("btnRecord").addEventListener("click", recordSnapshot);
   $("btnBasket").addEventListener("click", renderBasket);
