--- a/Index.html
+++ b/Index.html
@@ -127,6 +127,12 @@
       color: rgba(251,191,36,.98);
     }
     .item .meta{ margin-top:6px; color:var(--muted); font-size:12px; display:flex; gap:10px; flex-wrap:wrap; }
+    .source-link{
+      color: var(--accent);
+      font-weight: 700;
+      text-decoration: none;
+    }
+    .source-link:hover{ text-decoration: underline; }
 
     .kpis{ display:grid; grid-template-columns: 1fr 1fr; gap:10px; }
     .kpi{
@@ -254,6 +260,14 @@
       .replaceAll("'","&#039;");
   }
 
+  function getSourceUrl(row, item){
+    if (row && row.source_url) return row.source_url;
+    if (item && item.query) {
+      return "https://www.google.com/search?tbm=shop&q=" + encodeURIComponent(item.query);
+    }
+    return "";
+  }
+
   function renderItems(){
     const root = $("items");
     root.innerHTML = "";
@@ -264,6 +278,8 @@
       const sats = row?.sats;
       const stale = Boolean(row?.is_stale);
       const source = row?.price_source || "";
+      const description = row?.item_description || it.name;
+      const sourceUrl = getSourceUrl(row, it);
 
       const div = document.createElement("div");
       div.className = "item" + (it.id === activeItemId ? " active" : "");
@@ -273,10 +289,11 @@
                    source ? `<span class="badge">${escapeHtml(source)}</span>` : "";
 
       div.innerHTML = `
-        <div class="name">${escapeHtml(it.name)} ${badge}</div>
+        <div class="name">${escapeHtml(description)} ${badge}</div>
         <div class="meta">
           <span>${usd != null ? fmtUsd(usd) : "—"}</span>
           <span>${sats != null ? fmtSats(sats) : "—"}</span>
+          ${sourceUrl ? `<a class="source-link" href="${escapeHtml(sourceUrl)}" target="_blank" rel="noopener noreferrer">Source</a>` : ""}
         </div>
       `;
       root.appendChild(div);
