Update earliest price label

--- a/Index.html
+++ b/Index.html
@@ -314,8 +314,7 @@
           ${sourceUrl ? `<a class="source-link" href="${escapeHtml(sourceUrl)}" target="_blank" rel="noopener noreferrer">Source</a>` : ""}
         </div>
         <div class="first-available">
-          <span>First: ${firstUsd} on ${firstDate}</span>
-          <span>First: ${firstSats} on ${firstDate}</span>
+          <span>Earliest: ${firstUsd} and ${firstSats} on ${firstDate}</span>
         </div>
       `;
       root.appendChild(div);
